--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.39.0",
-    "eslint-plugin-react": "^7.32.2"
+    "gh-pages": "^4.0.0",
+    "sass": "^1.62.0",
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.2"
   }
 }
